# rust-api

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migration/src/: m20220101_000001_create_table.rs
migrations/: 20251125074810_create_users_table.sql
src/: main.rs  middleware.rs  ratelimit.rs
src/entity/: mod.rs  todo_list.rs  todos.rs  users.rs
src/func/auth/: login_handler.rs  mod.rs  session_handler.rs  verify_credentials.rs
src/handlers/: signin.rs  signup.rs  users.rs
src/routes/: auth.rs  signup.rs  users.rs
src/utils/: mod.rs  seaorm.rs
src/utils/lib/: error.rs
