[package]
name = "rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.7"
chrono = "0.4.42"
dotenvy = "0.15.7"
rand = "0.9.2"
rand_core = { version = "0.9.3", features = ["os_rng"] }
sea-orm = { version = "1.1.19", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full", "macros"] }
tower-http = { version = "0.6.7", features = ["cors"] }
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["v4"] }
